--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -12,38 +12,33 @@
     z-index: 1000;
     background-color: rgb(255, 255, 255); 
     max-width: 100vw;
-    ul {
+    ul{
         display: flex;
         list-style: none;
-        justify-content: right;
+        justify-content: space-between;
+        align-content: space-around;
         flex-wrap: wrap;
         min-height: 60px;
         align-items: baseline;
         border-bottom: #B08968 solid 3px;
-        i {
-            margin-top: 30px;
-        }
-        img {
+        margin: 5px;
+        img{
             width: 100px;
             margin-right: 700px;
             margin-top: 15px;
         }
-        li {
-            padding: 10px;
-            margin-right: 4px;
-            a {
+            a{
                 text-decoration: none;
                 color: #B08968;
                 &:hover{
                     background-color: #B08968;
                     border-radius: 5px;
                     color: white;
+                    padding: 3px;
                 }
             }
-        }
     }
 }
-
 
 #carouselExample img {
     height: 500px;
