--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 }
 @import './secciones/index';
 @import './secciones/nosotros';
+@import './secciones/productos';
 @import './secciones/talleres';
 @import './secciones/contacto';
 @import './secciones/footer';
