--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
   display: flex;
   list-style: none;
   justify-content: space-between;
-  align-content: space-around;
+  align-content: space-between;
   flex-wrap: wrap;
   min-height: 60px;
   align-items: baseline;
@@ -39,7 +39,7 @@
 .nav ul a:hover {
   background-color: #B08968;
   border-radius: 5px;
-  color: white;
+  color: rgba(255, 255, 255, 0.976);
   padding: 3px;
 }
 
@@ -112,20 +112,6 @@
 }
 
 @media (max-width: 500px) {
-  .logo {
-    width: 50px;
-  }
-  .nav ul {
-    display: block;
-    width: 100vw;
-  }
-  .nav ul {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    font-size: xx-small;
-    margin-left: 0px;
-  }
   #carouselExample {
     display: none;
   }
@@ -166,7 +152,7 @@
     margin: 0px;
   }
   .quienessomos {
-    font-size: medium;
+    font-size: small;
   }
   .descripcion {
     font-size: small;
@@ -331,6 +317,32 @@ h2 {
   padding-top: 25px;
 }
 
+@media (max-width: 500px) {
+  section .descripcion {
+    font-size: small;
+  }
+  section .quienessomos {
+    font-size: medium;
+  }
+  h2 {
+    max-width: 100vw;
+    font-size: medium;
+  }
+  .grilla-profes {
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+  }
+  .grilla-profes img {
+    max-width: 200px;
+  }
+  .grilla-profes .carta-titulo {
+    font-size: medium;
+  }
+  .grilla-profes .carta-texto {
+    font-size: small;
+  }
+}
 .titulo-producto {
   display: flex;
   justify-content: center;
@@ -349,6 +361,10 @@ h2 {
   justify-items: center;
 }
 
+.card-producto {
+  margin-bottom: 15px;
+  margin-top: 30px;
+}
 .card-producto img {
   width: 250px;
   height: 250px;
@@ -375,6 +391,37 @@ h2 {
   color: #472910;
 }
 
+@media (max-width: 500px) {
+  .titulo-producto {
+    max-width: 100vw;
+    font-size: large;
+  }
+  .card-producto {
+    display: grid;
+    grid-column: 1;
+    margin-left: 100px;
+  }
+  .card-producto img {
+    width: 200px;
+    height: 200px;
+    margin: auto;
+  }
+  .card-producto div h5 {
+    font-family: Libre Basrkeville;
+    font-size: medium;
+  }
+  .card-producto div p {
+    color: rgb(128, 128, 128);
+    margin-bottom: 5px;
+  }
+  .card-producto div a {
+    text-decoration: none;
+    color: #472910;
+    border: 2px solid #B08968;
+    padding: 2px;
+    margin-left: 100px;
+  }
+}
 .talleres {
   margin-left: 200px;
   margin-top: 100px;
