--- a/css/style.css
+++ b/css/style.css
@@ -115,15 +115,36 @@
   #carouselExample {
     display: none;
   }
-  .titulo {
-    font-size: small;
+  .destacados .titulo {
+    font-size: medium;
     width: 100vw;
   }
-  .destacados div img {
-    display: flex;
+  .destacados img {
+    display: grid;
+    grid-column: 1;
+    margin: 50%;
+    margin-bottom: 30px;
+  }
+  .suscripcion {
+    background-image: none;
+    max-width: 100vw;
+    height: 300px;
+    border: #FAEDCD solid 2px;
     margin: auto;
-    margin-bottom: 10px;
-    margin-top: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .suscripcion p {
+    font-size: large;
+    text-align: center;
+  }
+  .suscripcion button {
+    width: 100vw;
+  }
+  .suscripcion input {
+    width: 100vw;
   }
   .footer {
     width: 100vw;
@@ -150,95 +171,6 @@
   }
   .carrito {
     margin: 0px;
-  }
-  .quienessomos {
-    font-size: small;
-  }
-  .descripcion {
-    font-size: small;
-  }
-  .grilla-profes {
-    display: block;
-    justify-content: center;
-  }
-  .grilla-profes img {
-    width: 50vw;
-    border-top: #B08968 5px solid;
-  }
-  .carta-titulo {
-    font-size: small;
-    justify-content: flex-start;
-  }
-  .carta-texto {
-    font-size: smaller;
-    max-width: 50vw;
-    margin-bottom: 50px;
-  }
-  .talleres {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    justify-content: left;
-  }
-  .torno {
-    max-width: 100vw;
-    margin-left: 15vw;
-  }
-  .mano {
-    max-width: 100vw;
-    margin-left: 15vw;
-  }
-  .talleres .taller1 h1 {
-    font-size: medium;
-    margin-left: 0px;
-  }
-  .parrafotaller1 {
-    font-size: small;
-    margin-top: 10px;
-  }
-  .taller1 {
-    margin-top: 100px;
-    display: block;
-  }
-  .talleres .taller2 h1 {
-    font-size: medium;
-    margin-left: 0px;
-  }
-  .parrafotaller2 {
-    font-size: small;
-    margin-top: 10px;
-  }
-  .taller2 {
-    margin-top: 100px;
-    display: block;
-  }
-  .formulario {
-    max-width: 100vw;
-    margin: auto;
-  }
-  .ubicacion {
-    max-width: 100vw;
-    margin: auto;
-  }
-  .datos {
-    max-width: 100vw;
-    margin-left: 20%;
-  }
-  .mapa {
-    max-width: 100vw;
-    margin: auto;
-  }
-  .nombrecompleto {
-    max-width: 100vw;
-  }
-  .mail {
-    max-width: 100vw;
-  }
-  .tema {
-    max-width: 100vw;
-  }
-  .mensaje {
-    max-width: 100vw;
   }
 }
 section .quienessomos {
@@ -476,6 +408,56 @@ h2 {
   font-size: large;
 }
 
+@media (max-width: 500px) {
+  .talleres {
+    margin: auto;
+    max-width: 100vw;
+  }
+  .talleres .taller1 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+  .talleres .taller1 .torno {
+    width: 200px;
+    height: 200px;
+    margin: auto;
+  }
+  .talleres .taller1 h1 {
+    font-family: Libre Basrkeville;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .talleres .taller1 .parrafotaller1 {
+    font-family: "Quattrocento", serif;
+    margin: auto;
+    font-size: medium;
+    max-width: 100vw;
+  }
+  .talleres .taller2 {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+  .talleres .taller2 .mano {
+    width: 200px;
+    height: 200px;
+    margin: auto;
+  }
+  .talleres .taller2 h1 {
+    font-family: Libre Basrkeville;
+    margin: auto;
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .talleres .taller2 .parrafotaller2 {
+    font-family: "Quattrocento", serif;
+    margin-top: 0px;
+    font-size: medium;
+    max-width: 100vw;
+  }
+}
 .datos h1 {
   text-decoration: underline;
   margin-bottom: 20px;
@@ -565,6 +547,56 @@ h2 {
   padding-bottom: 15px;
 }
 
+@media (max-width: 500px) {
+  .datos h1 {
+    display: flex;
+    margin: auto;
+  }
+  .formulario {
+    max-width: 100vw;
+    margin: auto;
+  }
+  .ubicacion {
+    max-width: 100vw;
+    margin: auto;
+  }
+  .datos {
+    max-width: 100vw;
+    margin-left: 20%;
+  }
+  .mapa {
+    max-width: 100vw;
+    margin: auto;
+  }
+  .nombrecompleto {
+    max-width: 100vw;
+  }
+  .mail {
+    max-width: 100vw;
+  }
+  .tema {
+    max-width: 100vw;
+  }
+  .mensaje {
+    max-width: 100vw;
+  }
+  .ubicacion {
+    margin-top: 190px;
+  }
+  .ubicacion label {
+    font-family: Libre Basrkeville;
+    font-size: medium;
+    display: flex;
+    justify-content: center;
+    text-decoration: underline;
+    margin-bottom: 20px;
+  }
+  .ubicacion .mapa {
+    display: flex;
+    margin: auto;
+    max-width: 100vw;
+  }
+}
 .footer {
   text-align: center;
   margin-top: 5%;
