--- a/scss/secciones/_contacto.scss
+++ b/scss/secciones/_contacto.scss
@@ -1,9 +1,9 @@
-.datos{
+.datos {
     h1 {
         text-decoration: underline;
         margin-bottom: 20px;
     }
-} 
+}
 
 .formulario {
     float: right;
@@ -17,24 +17,29 @@
     margin-top: 35px;
     margin-right: 100px;
     float: right;
+
     label {
         margin-bottom: 20px;
         margin-top: 20px;
         font-family: Libre Basrkeville;
         color: black
     }
+
     .nombrecompleto {
         height: 30px;
         width: 500px;
     }
+
     .mail {
         height: 30px;
         width: 500px;
     }
+
     .tema {
         height: 30px;
         width: 500px;
     }
+
     .mensaje {
         height: 300px;
         width: 500px;
@@ -43,6 +48,7 @@
 
 .ubicacion {
     margin-top: 190px;
+
     label {
         font-family: Libre Basrkeville;
         font-size: large;
@@ -52,16 +58,17 @@
         margin-left: 100px;
         text-decoration: underline;
     }
+
     .mapa {
         margin-left: 100px;
         margin-top: 30px;
     }
-    }
+}
 
-    .boton-formulario{
-        margin-top: 15px;
-        padding: 5px;
-    }
+.boton-formulario {
+    margin-top: 15px;
+    padding: 5px;
+}
 
 .contacto {
     font-family: Libre Basrkeville;
@@ -70,13 +77,6 @@
     color: black;
     margin-right: 100px;
 }
-
-
-
-
-
-
-
 
 .datos {
     float: left;
@@ -96,4 +96,67 @@
     padding-bottom: 15px;
 }
 
+@media (max-width: 500px) {
+    .datos {
+        h1 {
+            display: flex;
+            margin: auto;
+        }
+    }
 
+    .formulario {
+        max-width: 100vw;
+        margin: auto;
+    }
+
+    .ubicacion {
+        max-width: 100vw;
+        margin: auto;
+    }
+
+    .datos {
+        max-width: 100vw;
+        margin-left: 20%;
+    }
+
+    .mapa {
+        max-width: 100vw;
+        margin: auto;
+    }
+
+    .nombrecompleto {
+        max-width: 100vw;
+    }
+
+    .mail {
+        max-width: 100vw;
+    }
+
+    .tema {
+        max-width: 100vw;
+    }
+
+    .mensaje {
+        max-width: 100vw;
+    }
+
+    .ubicacion {
+        margin-top: 190px;
+
+        label {
+            font-family: Libre Basrkeville;
+            font-size: medium;
+            display: flex;
+            justify-content: center;
+            text-decoration: underline;
+            margin-bottom: 20px;
+        }
+
+        .mapa {
+            display: flex;
+            margin: auto;
+            max-width: 100vw;
+        }
+    }
+
+}
