--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -117,16 +117,41 @@
     #carouselExample{
        display: none;
     }
-    .titulo{
-        font-size: small;
-        width: 100vw;
+    .destacados{
+        .titulo{
+            font-size: medium;
+            width: 100vw;
+        }
+        img{
+            display: grid;
+            grid-column: 1;
+            margin: 50%;
+            margin-bottom: 30px;
+        }
     }
-    .destacados div img{
-        display: flex;
+   
+    .suscripcion{
+        background-image: none;
+        max-width: 100vw;
+        height: 300px;
+        border: #FAEDCD solid 2px;
         margin: auto;
-        margin-bottom: 10px;
-        margin-top: 10px;
-    }
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        p{
+            font-size: large;
+            text-align: center;
+        }
+        button{
+            width: 100vw;
+        }
+        input{
+                width: 100vw;
+            }
+        }
+
     .footer{
         width: 100vw;
     }
@@ -155,106 +180,5 @@
     .carrito {
         margin: 0px;
     }
-    .quienessomos {
-       font-size: small;
-    }
-    
-    .descripcion {
-        font-size: small;
-    }
-    .grilla-profes{
-        display: block;
-        justify-content: center;
-   }
-   .grilla-profes img{
-    width: 50vw;
-    border-top: #B08968 5px solid;
-}
-
-.carta-titulo{
-    font-size: small;
-    justify-content: flex-start;
-}
-
-.carta-texto{
-    font-size: smaller;
-    max-width: 50vw;
-    margin-bottom: 50px;
-}
-
-.talleres{
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    justify-content: left;
-}
-.torno {
-   max-width: 100vw;
-   margin-left: 15vw;
-}
-
-.mano {
-    max-width: 100vw;
-    margin-left: 15vw;
-}
-
-
-.talleres .taller1 h1 {
-    font-size: medium;
-    margin-left: 0px;
-}
-
-.parrafotaller1 {
-    font-size: small;
-    margin-top: 10px;
-}
-
-.taller1 {
-    margin-top: 100px;
-    display: block;
-    
-}
-
-.talleres .taller2 h1 {
-   font-size: medium;
-   margin-left: 0px;
-}
-
-.parrafotaller2 {
-    font-size: small;
-    margin-top: 10px;
-}
-.taller2{
-    margin-top: 100px;
-    display: block;
-    
-}
-.formulario{
-    max-width: 100vw;
-    margin: auto;
-}
-.ubicacion{
-    max-width: 100vw;
-    margin: auto;
-}
-.datos{
-    max-width: 100vw;
-    margin-left: 20%;
-}
-.mapa{
-    max-width: 100vw;
-    margin: auto;
-}
-.nombrecompleto{
-    max-width: 100vw;
-}
-.mail{
-    max-width: 100vw;
-}
-.tema{
-    max-width: 100vw;
-}
-.mensaje{
-    max-width: 100vw;
-}
+   
 }
