--- a/scss/secciones/_talleres.scss
+++ b/scss/secciones/_talleres.scss
@@ -1,5 +1,3 @@
-
-
 .talleres {
     margin-left: 200px;
     margin-top: 100px;
@@ -55,6 +53,55 @@
     }
 }
 
-
+@media (max-width: 500px){
+  .talleres{
+    margin: auto;
+    max-width: 100vw;
+    .taller1 {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 50px;
+        .torno {
+            width: 200px;
+            height: 200px;
+            margin: auto;
+        }
+        h1 {
+            font-family: Libre Basrkeville;
+            margin: auto;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+        .parrafotaller1 {
+            font-family: 'Quattrocento', serif;
+            margin: auto;
+            font-size: medium;
+            max-width: 100vw;
+        }
+    }
+    .taller2 {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 50px;
+        .mano {
+            width: 200px;
+            height: 200px;
+            margin: auto;
+        }
+        h1 {
+            font-family: Libre Basrkeville;
+            margin: auto;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+        .parrafotaller2 {
+            font-family: 'Quattrocento', serif;
+            margin-top: 0px;
+            font-size: medium;
+            max-width: 100vw;
+        }
+    }
+}
+}
 
 
