--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -23,7 +23,7 @@
         border-bottom: #B08968 solid 3px;
         margin: 5px;
         img{
-            width: 100px;
+            width: 5%;
             margin-right: 700px;
             margin-top: 15px;
         }
@@ -39,6 +39,7 @@
             }
     }
 }
+
 
 
 
