--- a/scss/secciones/_productos.scss
+++ b/scss/secciones/_productos.scss
@@ -32,14 +32,14 @@
         }
         p{
             color: rgb(128, 128, 128);
-            margin-bottom: 5px;
+            margin-bottom: 15px;
         }
         a{
             text-decoration: none;
             color:#472910 ;
             border:  2px solid #B08968;
-            padding: 2px;
-            margin-left: 100px;
+            padding: 7px 90px;
+            font-size: larger;
             &:hover{
                 background-color: #B08968;
                 color: #472910;
