--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -88,7 +88,8 @@
     background-image: url(https://res.cloudinary.com/dbpcne3zt/image/upload/v1694423384/proyecto%20%20final%20desarrollo/fondo-quienes-somos_rsscms.png);
     max-width: 100vw;
     height: 300px;
-    border: #FAEDCD solid 5px;
+    border-top: #B08968 solid 5px;
+    border-bottom: #B08968 solid 5px;
     margin: auto;
     display: flex;
     align-items: center;
@@ -97,6 +98,10 @@
     p{
         font-size: xx-large;
         color: rgb(0, 0, 0);
+        background-color: #FAEDCD;
+        color: #B08968;
+        padding: 5px;
+        border-radius: 5px;
     }
     button{
         width: 200px;
@@ -115,6 +120,13 @@
 
 
 @media (max-width: 500px){
+    .nav{
+        ul{
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+        }
+    }
     #carouselExample{
        display: none;
     }
