--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
 }
 
 .suscripcion {
-  background-image: url(https://res.cloudinary.com/dbpcne3zt/image/upload/v1694423384/proyecto%20%20final%20desarrollo/fondo-quienes-somos_rsscms.png);
+  background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8vcHhmOWpwY3dkN2xhanZlajYwemw=/template_primary);
   max-width: 100vw;
   height: 300px;
   border-top: #B08968 solid 5px;
@@ -98,20 +98,19 @@
 .suscripcion p {
   font-size: xx-large;
   color: rgb(0, 0, 0);
-  background-color: #FAEDCD;
-  color: #B08968;
   padding: 5px;
   border-radius: 5px;
 }
 .suscripcion button {
   width: 200px;
   padding: 5px;
-  color: #FAEDCD;
+  color: #060400;
   background-color: #B08968;
   border: #B08968;
 }
 .suscripcion input {
-  width: 500px;
+  width: 600px;
+  height: 40px;
   border: #B08968 solid 2px;
   margin-bottom: 15px;
 }
@@ -183,22 +182,27 @@
     margin: 0px;
   }
 }
-section .quienessomos {
+.nosotros {
+  background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8veXZhdTdqd2czcnJ2c2xubDh6dHM=/template_primary);
+  height: 500px;
+}
+.nosotros .quienessomos {
   font-family: Libre Basrkeville;
   display: flex;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 80px;
+  margin-top: 20px;
   align-content: space-around;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
   font-size: x-large;
   padding: 15px;
-  color: #B08968;
+  color: #3b1b02;
   text-decoration: underline;
   font-size: xx-large;
 }
-section .descripcion {
+.nosotros .descripcion {
   font-family: "Quattrocento", serif;
   font-size: larger;
   display: flex;
@@ -220,7 +224,6 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
   color: #FAEDCD;
   margin-bottom: 150px;
   font-size: x-large;
@@ -483,7 +486,7 @@ h2 {
   flex-direction: column;
   align-items: flex-start;
   margin-top: 35px;
-  margin-right: 100px;
+  margin-right: 90px;
   float: right;
 }
 .formulario label {
@@ -522,8 +525,8 @@ h2 {
   text-decoration: underline;
 }
 .ubicacion .mapa {
-  margin-left: 100px;
-  margin-top: 30px;
+  margin-left: 20px;
+  margin-top: 20px;
 }
 
 .boton-formulario {
@@ -621,11 +624,11 @@ h2 {
   padding-top: 30px;
 }
 .footer .redes i {
-  margin-top: 90px;
+  margin-top: 70px;
   width: 100px;
 }
 .footer .contactanos {
-  margin-top: 30px;
+  margin-top: 80px;
   color: black;
   font-size: x-large;
   font-weight: bold;
@@ -634,6 +637,11 @@ h2 {
 }
 .footer .mailcontacto {
   margin-top: 30px;
+  font-family: "Quattrocento", serif;
+  font-size: larger;
+  margin-bottom: 30px;
+}
+.footer .telefono {
   font-family: "Quattrocento", serif;
   font-size: larger;
 }/*# sourceMappingURL=style.css.map */
