--- a/scss/secciones/_footer.scss
+++ b/scss/secciones/_footer.scss
@@ -11,11 +11,11 @@
         padding-top: 30px;
     }
     .redes i {
-        margin-top: 90px;
+        margin-top: 70px;
         width: 100px;
     }
     .contactanos {
-        margin-top: 30px;
+        margin-top: 80px;
         color: black;
         font-size: x-large;
         font-weight: bold;
@@ -24,6 +24,11 @@
     }
     .mailcontacto {
         margin-top: 30px;
+        font-family: 'Quattrocento', serif;
+        font-size: larger;
+        margin-bottom: 30px;
+    }
+    .telefono{
         font-family: 'Quattrocento', serif;
         font-size: larger;
     }
