--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
 }
 
 .suscripcion {
-  background-image: url(./fondo\ suscripcion.jpg);
+  background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8vcHhmOWpwY3dkN2xhanZlajYwemw=/template_primary);
   max-width: 100vw;
   height: 300px;
   border-top: #B08968 solid 5px;
@@ -183,7 +183,7 @@
   }
 }
 .nosotros {
-  background-image: url(./Fondo_quienes_somos.png);
+  background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8veXZhdTdqd2czcnJ2c2xubDh6dHM=/template_primary);
   height: 500px;
 }
 .nosotros .quienessomos {
