--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -85,7 +85,7 @@
     }
 } 
 .suscripcion{
-    background-image: url(./fondo\ suscripcion.jpg);
+    background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8vcHhmOWpwY3dkN2xhanZlajYwemw=/template_primary);
     max-width: 100vw;
     height: 300px;
     border-top: #B08968 solid 5px;
