--- a/scss/secciones/_productos.scss
+++ b/scss/secciones/_productos.scss
@@ -48,7 +48,7 @@
     }
 }
 
-@media (max-width: 500px){
+@media (max-width: 800px){
     .titulo-producto{
         max-width: 100vw;
         font-size: large;
@@ -56,11 +56,11 @@
     .card-producto{
         display: grid;
         grid-column: 1;
-        margin-left: 100px;
+        margin-left: 50%;
         img{
             width: 200px;
             height: 200px;
-            margin: auto;
+            margin-top: 10px;
         }
         div{
             h5{
