--- a/scss/secciones/_index.scss
+++ b/scss/secciones/_index.scss
@@ -5,28 +5,25 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300&family=Quattrocento:wght@400;700&display=swap');
 
-.nav{
+.logo-vivesimple{
+    width: 5%;
+}
+#navegacion{
     font-family: Libre Basrkeville;
     position: sticky;
     top: 0px;
     z-index: 1000;
-    background-color: rgb(255, 255, 255); 
     max-width: 100vw;
+    .seccion-menu{   
     ul{
         display: flex;
         list-style: none;
-        justify-content: space-between;
-        align-content: space-between;
+        justify-content: flex-end;
+        align-content: flex-end;
         flex-wrap: wrap;
         min-height: 60px;
-        align-items: baseline;
         border-bottom: #B08968 solid 3px;
-        margin: 5px;
-        img{
-            width: 5%;
-            margin-right: 700px;
-            margin-top: 15px;
-        }
+    }
             a{
                 text-decoration: none;
                 color: #B08968;
@@ -37,11 +34,8 @@
                     padding: 3px;
                 }
             }
-    }
+        } 
 }
-
-
-
 
 #carouselExample img {
     height: 500px;
@@ -85,7 +79,7 @@
     }
 } 
 .suscripcion{
-    background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8vcHhmOWpwY3dkN2xhanZlajYwemw=/template_primary);
+    background-image: url(/recursos/Diseño_sin_título.jpg);
     max-width: 100vw;
     height: 300px;
     border-top: #B08968 solid 5px;
@@ -118,7 +112,7 @@
 
 
 
-@media (max-width: 500px){
+@media (max-width: 800px){
     .nav{
         ul{
             display: flex;
