--- a/scss/secciones/_nosotros.scss
+++ b/scss/secciones/_nosotros.scss
@@ -1,5 +1,5 @@
 .nosotros{
-    background-image: url(https://res-console.cloudinary.com/dbpcne3zt/thumbnails/transform/v1/image/upload/Y19saW1pdCxoXzE2MDAsd18xNjAwLGZfanBnLGZsX2xvc3N5LmFueV9mb3JtYXQucHJlc2VydmVfdHJhbnNwYXJlbmN5LnByb2dyZXNzaXZl/v1/cHJveWVjdG8gIGZpbmFsIGRlc2Fycm9sbG8veXZhdTdqd2czcnJ2c2xubDh6dHM=/template_primary);
+    background-image: url(/recursos/Fondo_quienes_somos.png);
     height: 500px;
     .quienessomos {
         font-family: Libre Basrkeville;
@@ -79,10 +79,11 @@ h2{
 }
 
 
-@media (max-width: 500px){
+@media (max-width: 800px){
     section{
         .descripcion{
             font-size: small;
+            max-width: 100vw;
         }
         .quienessomos{
             font-size: medium;
@@ -96,8 +97,10 @@ h2{
         max-width: 100vw;
         display: flex;
         flex-direction: column;
+        align-items: center;
         img{
             max-width: 200px;
+            margin-top: 15px;
         }
         .carta-titulo{
             font-size: medium;
